Changed Rule Cards
Should  have just changed the colours and slight alignment of the text

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -429,7 +429,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1510,7 +1510,7 @@ TextureEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1655,9 +1655,9 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 WBP_Drink_Names_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object\" "
 WBP_NPC_Game_Availability_Indicator_C="\"Object\" "
 BP_Dialogue_Link_C="\"Object\" "
@@ -1668,8 +1668,8 @@ CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Ren
 PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object\" "
-TextLayoutWidget="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_Game_Completed_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
@@ -1737,13 +1737,18 @@ StaticMeshComponent="\"Object\" "
 Slider="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WidgetComponent="\"Object\" "
+WBP_Rules_Text_Holder_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1770,20 +1775,11 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=SoundCueEditor
-RecentAssetEditors=SoundCueEditor
-OpenAssetsAtExit=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn.WBP_Current_Turn
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/UI/Done_Assets/DARTS_BIG_BAR.DARTS_BIG_BAR
-OpenAssetsAtExit=/Game/UI/Done_Assets/DARTS_SMALL_BAR_VERTICAL.DARTS_SMALL_BAR_VERTICAL
-OpenAssetsAtExit=/Game/UI/Done_Assets/DARTS_BIG_BAR_VERTICAL.DARTS_BIG_BAR_VERTICAL
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Aim_Bar.WBP_Darts_Aim_Bar
-OpenAssetsAtExit=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board.BP_Dart_Board
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules.WBP_Auction_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules.WBP_I_Doubt_It_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules.WBP_Pool_Rules
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1799,36 +1795,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem2=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem3=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem4=/Game/UI/Done_Assets/TOP_ARROW_RED
-MRUItem5=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
-MRUItem6=/Game/Maps/Main_Level/Main_Level
-MRUItem7=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem8=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
-MRUItem9=/Game/UI/Done_Assets/DARTS_MINI_BAR_NO_SHADOW
-MRUItem10=/Game/UI/Done_Assets/DARTS_BIG_BAR
-MRUItem11=/Game/UI/Done_Assets/DARTS_BIG_BAR_HORIZONTAL
-MRUItem12=/Game/UI/Done_Assets/DARTS_BIG_BAR_VERTICAL
-MRUItem13=/Game/UI/Done_Assets/DARTS_SMALL_BAR_VERTICAL
-MRUItem14=/Game/UI/Done_Assets/DARTS_SMALL_BAR_HORIZONTAL
-MRUItem15=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Aim_Bar
-MRUItem16=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem17=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem18=/Game/NPCs/Models/Zilia/zilia
-MRUItem19=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem20=/Game/NPCs/BP_NPC
-MRUItem21=/Game/NPCs/Models/Biel/Biel
-MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
-MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
-MRUItem24=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
-MRUItem25=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem26=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
-MRUItem27=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem28=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
-MRUItem29=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
+MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem5=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem6=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem7=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem8=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem9=/Game/UI/Done_Assets/TOP_ARROW_RED
+MRUItem10=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
+MRUItem11=/Game/Maps/Main_Level/Main_Level
+MRUItem12=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem13=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
+MRUItem14=/Game/UI/Done_Assets/DARTS_MINI_BAR_NO_SHADOW
+MRUItem15=/Game/UI/Done_Assets/DARTS_BIG_BAR
+MRUItem16=/Game/UI/Done_Assets/DARTS_BIG_BAR_HORIZONTAL
+MRUItem17=/Game/UI/Done_Assets/DARTS_BIG_BAR_VERTICAL
+MRUItem18=/Game/UI/Done_Assets/DARTS_SMALL_BAR_VERTICAL
+MRUItem19=/Game/UI/Done_Assets/DARTS_SMALL_BAR_HORIZONTAL
+MRUItem20=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Aim_Bar
+MRUItem21=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem22=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem23=/Game/NPCs/Models/Zilia/zilia
+MRUItem24=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem25=/Game/NPCs/BP_NPC
+MRUItem26=/Game/NPCs/Models/Biel/Biel
+MRUItem27=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
+MRUItem28=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
+MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -2746,6 +2742,7 @@ PreviewMaterial.ImportSettings=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -2898,7 +2895,6 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
-Texture2D.Interchange =True
 Slider.Layout=True
 Slider.Appearance=True
 Slider.Style=True
@@ -2994,6 +2990,19 @@ BP_CardPile_C.Physics=True
 BP_CardPile_C.Networking=True
 BP_CardPile_C.Input=True
 BP_CardPile_C.Actor=True
+WBP_Rules_Text_Holder_C.Layout=True
+WBP_Rules_Text_Holder_C.Default=True
+WBP_Rules_Text_Holder_C.Appearance=True
+WBP_Rules_Text_Holder_C.Accessibility=True
+WBP_Rules_Text_Holder_C.Input=True
+WBP_Rules_Text_Holder_C.Interaction=True
+WBP_Rules_Text_Holder_C.Performance=True
+WBP_Rules_Text_Holder_C.Behavior=True
+WBP_Rules_Text_Holder_C.Render Transform=True
+WBP_Rules_Text_Holder_C.Rendering=True
+WBP_Rules_Text_Holder_C.Navigation=True
+WBP_Rules_Text_Holder_C.Localization=True
+WBP_Rules_Text_Holder_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3216,6 +3225,7 @@ FbxImportUI.Mesh=True
 BP_NPC_C.Animation=True
 UserDefinedEnum.Enumerators=True
 K2Node_CustomEvent.Graph=True
+TextBlock.Appearance=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
