Added Title to the Rules Cards
Added title to the rules cards, messed around w the other bit as well to format again

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -338,7 +338,7 @@ SplineComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.De
 BP_I_Doubt_It_Game_Manager_C=
 BP_Auction_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_Rat_Screw_Game_Manager_C=
-WBP_Rules_Text_Holder_C=
+WBP_Rules_Text_Holder_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 Received_Notify=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -346,6 +346,7 @@ StaticMesh=
 MeshNaniteSettings=
 BP_Accessory_Dequip_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 StaticMeshComponent=
+TextBlock=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -437,7 +438,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1518,7 +1519,7 @@ TextureEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1663,9 +1664,9 @@ PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Co
 SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 WBP_Drink_Names_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object\" "
 WBP_NPC_Game_Availability_Indicator_C="\"Object\" "
 BP_Dialogue_Link_C="\"Object\" "
@@ -1676,8 +1677,8 @@ CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Ren
 PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_Game_Completed_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
@@ -1748,7 +1749,7 @@ SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render 
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WidgetComponent="\"Object\" "
-WBP_Rules_Text_Holder_C="\"Object\" "
+WBP_Rules_Text_Holder_C="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_Accessory_Equip_C="\"Object\" "
 BP_Accessory_Dequip_C="\"Object\" "
 BP_Attach_Accessories_Together_C="\"Object\" "
@@ -1763,8 +1764,12 @@ StaticMesh="\"Object\" "
 SoundWave="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=StaticMeshEditor
@@ -1789,12 +1794,13 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules.WBP_I_Doubt_It_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules.WBP_Auction_Rules
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1810,36 +1816,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem1=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
-MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
-MRUItem3=/Game/Maps/Main_Level/Main_Level
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem5=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
-MRUItem6=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
-MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem8=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem9=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem10=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem11=/Game/NPCs/BP_NPC
-MRUItem12=/Game/NPCs/Animations/BP_End_Character_Specific_Action
-MRUItem13=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem14=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem15=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem16=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
-MRUItem17=/Game/NPCs/Animations/BP_Attach_Accessories_Together
-MRUItem18=/Game/NPCs/Animations/BP_Accessory_Dequip
-MRUItem19=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem20=/Game/NPCs/BPI_NPC_Opponent
-MRUItem21=/Game/NPCs/Animations/BP_Accessory_Equip
-MRUItem22=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem23=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem24=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem25=/Game/NPCs/Animations/BP_Dialogue_Link
-MRUItem26=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem27=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem28=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem29=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem6=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
+MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
+MRUItem8=/Game/Maps/Main_Level/Main_Level
+MRUItem9=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem10=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem11=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
+MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem13=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem14=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem16=/Game/NPCs/BP_NPC
+MRUItem17=/Game/NPCs/Animations/BP_End_Character_Specific_Action
+MRUItem18=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
+MRUItem19=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem20=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem21=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
+MRUItem22=/Game/NPCs/Animations/BP_Attach_Accessories_Together
+MRUItem23=/Game/NPCs/Animations/BP_Accessory_Dequip
+MRUItem24=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem25=/Game/NPCs/BPI_NPC_Opponent
+MRUItem26=/Game/NPCs/Animations/BP_Accessory_Equip
+MRUItem27=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem28=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem29=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3094,6 +3100,8 @@ SoundWave.Developer=True
 SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+WBP_Rules_Text_Holder_C.Designer=True
+CanvasPanel.Layout=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
