Simplified hovering and unhovering for rules.
Now using get current animation time to determine when to start animation from for hovering and unhovering in the rules widget.
New button in rules widget which is invisible just using it for the hovering and unhovering events.
Its kinda fixed most of the visual issues you can still glitch it out a bit but think its less so now.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -96,12 +96,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=1914
+NewWindowHeight=1040
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1519,7 +1523,7 @@ TextureEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1664,9 +1668,9 @@ PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Co
 SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 WBP_Drink_Names_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 SpringArmComponent="\"Object\" "
 WBP_NPC_Game_Availability_Indicator_C="\"Object\" "
 BP_Dialogue_Link_C="\"Object\" "
@@ -1674,9 +1678,9 @@ AnimNotify="\"Object\" "
 DataTable="\"Object\" "
 Struct_Dialogue="\"Struct.PossibleSoundCues_26_EDD8CC2F42E42ED96F85B9B5FBB99B46\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1749,7 +1753,7 @@ SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render 
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WidgetComponent="\"Object\" "
-WBP_Rules_Text_Holder_C="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+WBP_Rules_Text_Holder_C="\"Object\" "
 BP_Accessory_Equip_C="\"Object\" "
 BP_Accessory_Dequip_C="\"Object\" "
 BP_Attach_Accessories_Together_C="\"Object\" "
@@ -1770,7 +1774,7 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1797,10 +1801,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules.WBP_I_Doubt_It_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules.WBP_Auction_Rules
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1816,11 +1816,11 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
 MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
 MRUItem6=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
 MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
@@ -3263,7 +3263,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
