--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,7 +323,7 @@ BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultVa
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+SkeletalMeshComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_Jukebox_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
@@ -1663,10 +1663,10 @@ AnimGraphNode_BlendListBase="\"Object\" "
 AnimGraphNode_BlendListByInt="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 WBP_Drink_Names_C="\"Object\" "
 UserWidget="\"Object\" "
 Widget="\"Object\" "
@@ -1699,7 +1699,7 @@ AnimGraphNode_LookAt="\"Object\" "
 AnimGraphNode_SkeletalControlBase="\"Object\" "
 SkeletalMesh="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 SkinnedAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 LODInfoUILayout="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
@@ -1770,6 +1770,8 @@ SoundWave="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1787,7 +1789,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1799,8 +1800,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1816,36 +1815,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem6=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
-MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
-MRUItem8=/Game/Maps/Main_Level/Main_Level
-MRUItem9=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem10=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
-MRUItem11=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
-MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem13=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem14=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem16=/Game/NPCs/BP_NPC
-MRUItem17=/Game/NPCs/Animations/BP_End_Character_Specific_Action
-MRUItem18=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem19=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem20=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem21=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
-MRUItem22=/Game/NPCs/Animations/BP_Attach_Accessories_Together
-MRUItem23=/Game/NPCs/Animations/BP_Accessory_Dequip
-MRUItem24=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem25=/Game/NPCs/BPI_NPC_Opponent
-MRUItem26=/Game/NPCs/Animations/BP_Accessory_Equip
-MRUItem27=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem28=/Game/NPCs/Animations/BP_Dialogue_Link
-MRUItem29=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem0=/Game/NPCs/Models/Biel/Biel
+MRUItem1=/Game/NPCs/BP_NPC
+MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem8=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
+MRUItem9=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
+MRUItem10=/Game/Maps/Main_Level/Main_Level
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem13=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
+MRUItem14=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem16=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem18=/Game/NPCs/Animations/BP_End_Character_Specific_Action
+MRUItem19=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
+MRUItem20=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem21=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem22=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
+MRUItem23=/Game/NPCs/Animations/BP_Attach_Accessories_Together
+MRUItem24=/Game/NPCs/Animations/BP_Accessory_Dequip
+MRUItem25=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem26=/Game/NPCs/BPI_NPC_Opponent
+MRUItem27=/Game/NPCs/Animations/BP_Accessory_Equip
+MRUItem28=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
+MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3263,7 +3262,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3333,6 +3332,7 @@ LastLogListing=BlueprintLog
 /Game/NPCs/Animations/BP_Calculate_Random_State_Int.BP_Calculate_Random_State_Int=1
 /Game/NPCs/Animations/BP_End_Character_Specific_Action.BP_End_Character_Specific_Action=1
 /Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card=1
+/Game/NPCs/Models/Biel/Biel_Character_Rig_UE.Biel_Character_Rig_UE=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -3462,6 +3462,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPCs/Models/Biel/Biel_Character_Rig_UE.Biel_Character_Rig_UE;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail.sloth_cocktail;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail.pride_cocktail;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail.lust_cocktail;
